--- a/my-lerna-library/packages/core/package.json
+++ b/my-lerna-library/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-lerna-library",
+  "name": "@my-lerna-library/core",
   "private": true,
   "version": "1.0.0",
   "license": "ISC",
